<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.glicheck.GUI.RelatorioGlicemiaActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edtValor"
        android:ems="10"
        android:id="@+id/edtValor" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnGlicemia"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdcionar"
            android:id="@+id/btnAdcionar"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeletar"
            android:id="@+id/btnDeletar"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lstGlicemia"
        android:choiceMode="singleChoice" />

</LinearLayout>
